force-app/main/default/objects/Account/fields/UFComercial__c.field-meta.xml
<CustomField>
    <fullName>UFComercial__c</fullName>
    <description>UF comercial da conta</description>
    <label>UF (Comercial)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>