force-app/main/default/objects/Account/fields/UtilizaNoAto__c.field-meta.xml
<CustomField>
    <fullName>UtilizaNoAto__c</fullName>
    <description>Utiliza no ato da conta</description>
    <label>Utiliza no ato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>