force-app/main/default/objects/Account/fields/ValorCapitalSocial__c.field-meta.xml
<CustomField>
    <fullName>ValorCapitalSocial__c</fullName>
    <description>Valor do capital social</description>
    <label>Valor do Capital Social</label>
    <length>30</length>
    <type>Text</type>
</CustomField>