force-app/main/default/objects/Account/fields/WebSite__c.field-meta.xml
<CustomField>
    <fullName>WebSite__c</fullName>
    <description>Website da empresa</description>
    <label>WebSite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>