force-app/main/default/objects/Account/validationRules/ContaPessoalSourceCelular.validationRule-meta.xml
<ValidationRule>
    <fullName>ContaPessoalSourceCelular</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Conta pessoal&quot;,
  ISBLANK( PersonMobilePhone )
)</errorConditionFormula>
    <errorDisplayField>PersonMobilePhone</errorDisplayField>
    <errorMessage>Encontramos um seguinte obstáculo, Revise os seguintes campos: Celular</errorMessage>
</ValidationRule>