force-app/main/default/objects/Account/validationRules/ContaPessoalSourceEmail.validationRule-meta.xml
<ValidationRule>
    <fullName>ContaPessoalSourceEmail</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Conta pessoal&quot;,
  ISBLANK( PersonEmail )
)</errorConditionFormula>
    <errorDisplayField>PersonEmail</errorDisplayField>
    <errorMessage>Encontramos um seguinte obstáculo, Revise os seguintes campos: Email</errorMessage>
</ValidationRule>