force-app/main/default/objects/Account/validationRules/ContaSourceCNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>ContaSourceCNPJ</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Conta&quot;,
ISBLANK(CNPJ__c)
)</errorConditionFormula>
    <errorDisplayField>CNPJ__c</errorDisplayField>
    <errorMessage>Encontramos um seguinte obstáculo, Revise os seguintes campos: CNPJ</errorMessage>
</ValidationRule>