force-app/main/default/objects/Account/validationRules/ContaSourceEmail.validationRule-meta.xml
<ValidationRule>
    <fullName>ContaSourceEmail</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Conta&quot;,
  ISBLANK( EmailJuridico__c )  
)</errorConditionFormula>
    <errorDisplayField>EmailJuridico__c</errorDisplayField>
    <errorMessage>Encontramos um seguinte obstáculo, Revise os seguintes campos: Email</errorMessage>
</ValidationRule>