force-app/main/default/objects/Account/validationRules/ContaSourceInscricaoEstadual.validationRule-meta.xml
<ValidationRule>
    <fullName>ContaSourceInscricaoEstadual</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Conta&quot;,
ISBLANK(InscricaoEstadual__c)
)</errorConditionFormula>
    <errorDisplayField>InscricaoEstadual__c</errorDisplayField>
    <errorMessage>Encontramos um seguinte obstáculo, Revise os seguintes campos: Inscrição Estadual</errorMessage>
</ValidationRule>