force-app/main/default/objects/Account/validationRules/ContaSourceInscricaoMunicipal.validationRule-meta.xml
<ValidationRule>
    <fullName>ContaSourceInscricaoMunicipal</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Conta&quot;,
ISBLANK(InscricaoMunicipal__c)
)</errorConditionFormula>
    <errorDisplayField>InscricaoMunicipal__c</errorDisplayField>
    <errorMessage>Encontramos um seguinte obstáculo, Revise os seguintes campos: Inscrição Municipal</errorMessage>
</ValidationRule>