force-app/main/default/objects/Account/validationRules/ContaSourceNomeEmpresa.validationRule-meta.xml
<ValidationRule>
    <fullName>ContaSourceNomeEmpresa</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Conta&quot;,
ISBLANK(NomeEmpresa__c)
)</errorConditionFormula>
    <errorDisplayField>NomeEmpresa__c</errorDisplayField>
    <errorMessage>Encontramos um seguinte obstáculo, Revise os seguintes campos: Nome da Empresa</errorMessage>
</ValidationRule>