force-app/main/default/objects/Account/validationRules/ContaSourceTelefone.validationRule-meta.xml
<ValidationRule>
    <fullName>ContaSourceTelefone</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Conta&quot;,
				ISBLANK( Phone )
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Encontramos um seguinte obstáculo, Revise os seguintes campos: Telefone</errorMessage>
</ValidationRule>