force-app/main/default/objects/Account/validationRules/ValidacaoCelularAdicional1.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoCelularAdicional1</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( CelularAdicional1__c )),
NOT(REGEX( CelularAdicional1__c , &quot;\\+55[0-9]{11}&quot;))

)</errorConditionFormula>
    <errorMessage>Preencher este campo no formato +55 DDD + número do celular &quot;+5511999999999&quot;</errorMessage>
</ValidationRule>