force-app/main/default/objects/Account/validationRules/ValidacaoCelularAdiocinal2.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoCelularAdiocinal2</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( CelularAdicional2__c )),
NOT(REGEX(CelularAdicional2__c , &quot;\\+55[0-9]{11}&quot;))

)</errorConditionFormula>
    <errorMessage>Preencher este campo no formato +55 DDD + número do celular &quot;+5511999999999&quot;</errorMessage>
</ValidationRule>