force-app/main/default/objects/Account/validationRules/ValidacaoCelularComercialAdicional.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoCelularComercialAdicional</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(CelularComercialAdicional__c)),
NOT(REGEX(CelularComercialAdicional__c, &quot;[0-9]{11}&quot;))

)</errorConditionFormula>
    <errorDisplayField>CelularComercialAdicional__c</errorDisplayField>
    <errorMessage>O campo &quot;Celular Comercial Adicional&quot; deve ser preenchido no formato &quot;11999999999&quot;</errorMessage>
</ValidationRule>