force-app/main/default/objects/Account/validationRules/ValidacaoCelularJuridico.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoCelularJuridico</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(CelularJuridico__c)),
NOT(REGEX(CelularJuridico__c, &quot;[0-9]{11}&quot;))

)</errorConditionFormula>
    <errorDisplayField>PersonMobilePhone</errorDisplayField>
    <errorMessage>O campo &quot;Celular&quot; deve ser preenchido no formato &quot;11999999999&quot;</errorMessage>
</ValidationRule>