force-app/main/default/objects/Account/validationRules/ValidacaoCelularPersonMobile.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoCelularPersonMobile</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(PersonMobilePhone)),
NOT(REGEX(PersonMobilePhone, &quot;[0-9]{11}&quot;))

)</errorConditionFormula>
    <errorDisplayField>CelularJuridico__c</errorDisplayField>
    <errorMessage>O campo &quot;Celular&quot; deve ser preenchido no formato &quot;11999999999&quot;</errorMessage>
</ValidationRule>