force-app/main/default/objects/Account/validationRules/ValidacaoPersonOtherPhone.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoPersonOtherPhone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(PersonOtherPhone)),
NOT(REGEX(PersonOtherPhone, &quot;[0-9]{10}&quot;))
)</errorConditionFormula>
    <errorDisplayField>PersonOtherPhone</errorDisplayField>
    <errorMessage>O campo &quot;Celular Pessoal Adicional&quot; deve ser preenchido no formato &quot;11999999999&quot;</errorMessage>
</ValidationRule>