force-app/main/default/objects/Account/validationRules/ValidacaoTelefone.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoTelefone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Phone)),
NOT(REGEX(Phone, &quot;[0-9]{10}&quot;))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>O campo &quot;Telefone&quot; deve ser preenchido no formato &quot;1125555555&quot;</errorMessage>
</ValidationRule>