force-app/main/default/objects/Account/validationRules/ValidacaoTelefoneComercial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoTelefoneComercial</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(TelefoneComercial__c)),
NOT(REGEX(TelefoneComercial__c, &quot;[0-9]{10}&quot;))
)</errorConditionFormula>
    <errorDisplayField>TelefoneComercial__c</errorDisplayField>
    <errorMessage>O campo &quot;Telefone Comercial&quot; deve ser preenchido no formato &quot;1125555555&quot;</errorMessage>
</ValidationRule>