force-app/main/default/objects/Account/validationRules/ValidacaoTelefoneResidencial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoTelefoneResidencial</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(PersonHomePhone)),
NOT(REGEX(PersonHomePhone, &quot;[0-9]{10}&quot;))
)</errorConditionFormula>
    <errorDisplayField>PersonHomePhone</errorDisplayField>
    <errorMessage>O campo &quot;Telefone Residencial&quot; deve ser preenchido no formato &quot;1125555555&quot;</errorMessage>
</ValidationRule>